# for_fun_bot

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml
test/: crawler.py  test_paddle.py
test/black/: 181.jpg_  270.jpg_  299.jpg_  305.jpg_  436.jpg_
test/white/: 199.jpg_  237.jpg_  366.jpg_
testbot/plugins/comfort/: __init__.py
testbot/plugins/heartbeat/: __init__.py
testbot/plugins/help/: __init__.py
testbot/plugins/random_black/: __init__.py
testbot/plugins/random_white/: __init__.py
testbot/plugins/weather/: __init__.py
