[project]
name = "testbotV0-0"
version = "0.1.0"
description = "testbotV0-0"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_gocqhttp"]
plugin_dirs = ["testbot/plugins"]
builtin_plugins = []
